# Zaru

./: Cargo.toml  LICENSE  NOTES.md  README.md  TODO.txt
crates/include-blob/: Cargo.toml
crates/include-blob-macros/: Cargo.toml
crates/include-blob-macros/src/: lib.rs
crates/include-blob/src/: lib.rs
crates/zaru/: Cargo.toml  build.rs
crates/zaru-gui/: Cargo.toml
crates/zaru-gui/src/: lib.rs  renderer.rs  shaders.rs
crates/zaru-image/: Cargo.toml
crates/zaru-image/src/: blend.rs  blend.wgsl  color.rs  decode.rs  draw.rs  gpu.rs  image.rs  jpeg.rs  lib.rs  num.rs  rect.rs  resolution.rs  tests.rs  view.rs
crates/zaru-image/src/draw/: epaint.rs  lines.rs  lines.wgsl  mod.rs
crates/zaru-image/src/gui/: mod.rs  renderer.rs
crates/zaru-image/src/gui/shaders/: quad.vert
crates/zaru-linalg/: Cargo.toml
crates/zaru-linalg/src/: approx.rs  lib.rs  matrix.rs  quat.rs  traits.rs  vector.rs
crates/zaru-linalg/src/approx/: impls.rs
crates/zaru-linalg/src/matrix/: mod.rs  ops.rs
crates/zaru-linalg/src/quat/: ops.rs  view.rs
crates/zaru-linalg/src/vector/: mod.rs  ops.rs  view.rs
crates/zaru-macros/: Cargo.toml
crates/zaru-macros/src/: lib.rs
crates/zaru-nn/: Cargo.toml
crates/zaru-nn/src/: lib.rs  tensor.rs
crates/zaru-utils/: Cargo.toml
crates/zaru-utils/src/: lib.rs  num.rs  pnp.rs  procrustes.rs  timer.rs
crates/zaru-video/: Cargo.toml
crates/zaru-video/src/: anim.rs  httpcam.rs  webcam.rs
crates/zaru/examples/: animation.rs  body_detection.rs  body_tracking.rs  eval_face_recognition.rs  face_detection.rs  facemarks68.rs  facemesh.rs  hand_tracking.rs  httpcam.rs  jpegbench.rs  load_image.rs  palm_detection.rs  pose68.rs  webcam.rs
crates/zaru/src/: body.rs  detection.rs  facetracking.rs  iter.rs  landmark.rs  lib.rs  main.rs  num.rs  pnp.rs  procrustes.rs  rect.rs  slice.rs  termination.rs  test.rs
crates/zaru/src/body/: detection.rs  landmark.rs
crates/zaru/src/detection/: nms.rs  ssd.rs
crates/zaru/src/face/: detection.rs  eye.rs  landmark.rs
crates/zaru/src/face/landmark/: mediapipe.rs  mediapipe_facemesh.rs  multipie68.rs
crates/zaru/src/filter/: alpha_beta.rs  ema.rs
crates/zaru/src/gui/: mod.rs  renderer.rs  shader.wgsl  shaders.rs
crates/zaru/src/hand/: detection.rs  landmark.rs  tracking.rs
crates/zaru/src/image/: draw.rs  jpeg.rs  mod.rs  rect.rs  resolution.rs  tests.rs
crates/zaru/src/nn/: backend.rs  mod.rs  tensor.rs
crates/zaru/src/video/: anim.rs  httpcam.rs  mod.rs  webcam.rs
crates/zaru/tests/: misc.rs
examples/: anim.rs  animation.rs  biblical_accuracy.rs  body_detection.rs  body_pose.rs  body_tracking.rs  droidcam.rs  eval_face_recognition.rs  face_detection.rs  facemarks68.rs  hand_tracking.rs  httpcam.rs  laughing_man.rs  load_image.rs  palm_detection.rs  rec.rs  webcam.rs
models/: face_detection_short_range.onnx  face_landmark.onnx
shaders/: tex.frag
src/: anim.rs  avg.rs  defer.rs  detection.rs  detector.rs  droidcam.rs  drop.rs  eye.rs  face.rs  facetracking.rs  filter.rs  gui.rs  hand.rs  httpcam.rs  image.rs  landmark.rs  lib.rs  main.rs  nn.rs  num.rs  on_drop.rs  pipeline.rs  procrustes.rs  resolution.rs  slice.rs  test.rs  timer.rs  webcam.rs  worker.rs
src/avg/: moving.rs  variance_aware.rs
src/body/: detection.rs  detector.rs  landmark.rs
src/detection/: filter.rs  nms.rs  ssd.rs
src/detector/: avg.rs  nma.rs  ssd.rs
src/face/: detection.rs  detector.rs  eye.rs  landmark.rs
src/face/detector/: avg.rs  filter.rs
src/face/landmark/: mediapipe_facemesh.rs  multipie68.rs
src/filter/: alpha_beta.rs  ema.rs  moving.rs  one_euro.rs  variance_aware.rs
src/gui/: renderer.rs  shaders.rs
src/hand/: detection.rs  detector.rs  landmark.rs  tracking.rs
src/image/: blend.rs  draw.rs  jpeg.rs  rect.rs  tests.rs
src/landmark/: reference_data.rs
src/nn/: tensor.rs
tests/: misc.rs
xtask/src/: lib.rs
