[package]
name = "zaru"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
once_cell = "1.9.0"
crossbeam = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }

tract-onnx = "0.16.4"

image = "0.24.0"
embedded-graphics = "0.7.1"
mozjpeg = "0.9.2"

winit = "0.26.1"
wgpu = { version = "0.12.0", features = ["spirv"] }
pollster = "0.2.5"
naga = { version = "0.8.5", features = ["glsl-in"] }
bytemuck = { version = "1.7.3", features = ["derive"] }
nalgebra = "0.31.0"

livid = { path = "../LiVid" }

[dev-dependencies]
rayon = "1.5.1"

[profile.release]
incremental = true
