[package]
name = "zaru"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Neural Network powered machine perception and computer vision library"

[dependencies]
# generic deps
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
once_cell = "1.9.0"
pawawwewism = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }

# neural nets
tract-onnx = "0.18.0"
tinyvec = { version = "1.6.0", features = ["alloc"] }
wonnx = { git = "https://github.com/webonnx/wonnx.git", rev = "aa92e550f15078ab936539f4225fbcb3f5b6895f" }

# image processing
image = { version = "0.24.0", default-features = false, features = ["jpeg", "png", "gif"] }
embedded-graphics = "0.7.1"
zune-jpeg = "0.2.0"
linuxvideo = "0.1.0"

# linear algebra
nalgebra = "0.31.0"

# GUI
winit = "0.26.1"
wgpu = { version = "0.13.1", features = ["spirv"] }
pollster = "0.2.5"
naga = { version = "0.9.0", features = ["glsl-in"] }
bytemuck = { version = "1.7.3", features = ["derive"] }

[patch.crates-io]
zune-jpeg = { path = "../zune-jpeg" }

[dev-dependencies]
rayon = "1.5.1"
fastrand = "1.7.0"

[profile.dev]
debug = 0
panic = "abort"

[profile.release]
incremental = true
opt-level = 2
panic = "abort"
