[package]
name = "include-blob"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Include large binary files in an application without incurring the compile time cost"

[dependencies]
include-blob-macros = { path = "../include-blob-macros" }
object = { version = "0.30.0", default-features = false, features = ["write"] }
ar = "0.9.0"
