[package]
name = "zaru-gui"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "GUI for Zaru"

[dependencies]
zaru-image = { path = "../zaru-image" }

# generic deps
anyhow = "1.0.53"
log = "0.4.14"
itertools = "0.10.3"
once_cell = "1.9.0"

# GUI
winit = "0.27.3"
wgpu = { version = "0.14.0", features = ["spirv"] }
pollster = "0.2.5"
naga = { version = "0.10.0", features = ["glsl-in"] }
bytemuck = { version = "1.7.3", features = ["derive"] }
