[package]
name = "zaru-image"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Image manipulation library aimed at computer vision"

[dependencies]
zaru-utils = { path = "../zaru-utils" }

anyhow = "1.0.53"
log = "0.4.14"
itertools = "0.10.3"
once_cell = "1.9.0"
pawawwewism = "0.1.0"
nalgebra = "0.31.0"
image = { version = "0.24.0", default-features = false, features = ["jpeg", "png", "gif"] }
embedded-graphics = "0.7.1"
mozjpeg = "0.9.4"
linuxvideo = "0.1.1"
winit = "0.27.3"
raw-window-handle = "0.5.0"
v-ayylmao = "0.0.4"
zune-jpeg = { git = "https://github.com/SludgePhD/zune-jpeg.git", rev = "e76c28cb3b39e9a02ae4732a1f4a3fcf4ea99aed" }
# This zune-jpeg commit contains a bunch of fixes not on crates.io.
# It should probably be switched to https://github.com/etemesi254/zune-image, but that is currently
# too slow to be usable (<30 FPS at 4K even on my workstation).

# GUI
wgpu = { version = "0.14.0", features = ["spirv"] }
pollster = "0.2.5"
naga = { version = "0.10.0", features = ["glsl-in"] }
bytemuck = { version = "1.7.3", features = ["derive"] }
