[package]
name = "zaru-image"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
repository = "https://github.com/SludgePhD/Zaru"

[dependencies]
zaru-linalg = { path = "../zaru-linalg", version = "0.1.0" }

anyhow = "1.0.53"
log = "0.4.14"

nalgebra = "0.32.1"
winit = "0.28.1"
wgpu = "0.17.1"
pollster = "0.3.0"
bytemuck = "1.14.0"
epaint = "0.23.0"
egui-wgpu = "0.23.0"

# JPEG
fev = "0.1.0"
jpeg-decoder = "0.3.0"
mozjpeg = "0.9.4"
turbojpeg = "0.5.3"
zune-jpeg = "0.3.15"
fast-but-wrong = { git = "https://github.com/SludgePhD/zune-jpeg.git", rev = "e76c28cb3b39e9a02ae4732a1f4a3fcf4ea99aed", package = "zune-jpeg" }

# other formats
png = "0.17.10"

[dev-dependencies]
approx = "0.5.1"
