[package]
name = "zaru-macros"
version = "0.1.0"
edition = "2021"
license = "0BSD"
description = "Procedural macros used by `zaru`; don't use this crate directly"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", default-features = false, features = ["full", "parsing", "proc-macro", "printing"] }
quote = "1.0.26"
