[package]
name = "zaru-nn"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Neural Network powered machine perception and computer vision library"

[dependencies]
zaru-image = { path = "../zaru-image" }
zaru-utils = { path = "../zaru-utils" }

# generic deps
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.10.0"
itertools = "0.10.3"
once_cell = "1.9.0"

# neural nets
tract-onnx = "0.19.1"
tinyvec = { version = "1.6.0", features = ["alloc"] }
wonnx = { git = "https://github.com/webonnx/wonnx.git", rev = "315d66a318515f1cc5e42684ddb8bd22ec01d378" }
pollster = "0.2.5"
