[package]
name = "zaru-utils"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Utilities"

[dependencies]
log = "0.4.17"
nalgebra = "0.31.0"

[dev-dependencies]
approx = "0.5.1"
once_cell = "1.9.0"
env_logger = "0.10.0"
fastrand = "1.8.0"
