[package]
name = "zaru-video"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Zaru's Video Stream APIs"

[dependencies]
zaru-image = { path = "../zaru-image" }
zaru-utils = { path = "../zaru-utils" }

# generic deps
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.10.0"
itertools = "0.10.3"
once_cell = "1.9.0"
pawawwewism = "0.1.0"

image = { version = "0.24.0", default-features = false, features = ["jpeg", "png", "gif"] }
embedded-graphics = "0.7.1"
mozjpeg = "0.9.4"
linuxvideo = "0.2.0"
