[package]
name = "zaru"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
repository = "https://github.com/SludgePhD/Zaru"
description = "Neural Network powered machine perception and computer vision library"

[dependencies]
zaru-macros = { path = "../zaru-macros", version = "0.1.0" }
zaru-image = { path = "../zaru-image", version = "0.1.0" }
zaru-linalg = { path = "../zaru-linalg", version = "0.1.0" }

# generic deps
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.10.0"
itertools = "0.11.0"
pawawwewism = "0.1.0"
include-blob = "0.1.0"

# image processing
image = { version = "0.24.0", default-features = false, features = ["jpeg", "png", "gif"] }
embedded-graphics = "0.8.0"
jpeg-decoder = "0.3.0"
mozjpeg = "0.9.4"
turbojpeg = "0.5.3"
zune-jpeg = "0.3.15"
linuxvideo = "0.3.1"
fev = "0.1.0"
fast-but-wrong = { git = "https://github.com/SludgePhD/zune-jpeg.git", rev = "e76c28cb3b39e9a02ae4732a1f4a3fcf4ea99aed", package = "zune-jpeg" }
# This zune-jpeg commit contains a bunch of fixes not on crates.io.
# It should probably be switched to https://github.com/etemesi254/zune-image, but that is currently
# too slow to be usable (<30 FPS at 4K even on my workstation).

# linear algebra
nalgebra = "0.32.1"

# GUI
winit = "0.28.1"
wgpu = "0.17.1"
pollster = "0.3.0"
raw-window-handle = "0.5.0"

# neural nets
tract-onnx = "0.20.5"
tinyvec = { version = "1.6.0", features = ["alloc"] }
wonnx = { path = "../../../wonnx/wonnx" }
# `ort` makes completely arbitrary breaking changes on minor and patch releases, so we need to pin
# to a precise version
ort = { version = "=1.14.8", default-features = false, features = ["half", "load-dynamic", "download-binaries", "copy-dylibs"] }
ndarray = "0.15.6"
half = "2.2.1"

[build-dependencies]
include-blob = "0.1.3"

[dev-dependencies]
rayon = "1.5.1"
approx = "0.5.1"
fastrand = "2.0.0"
